--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
    <meta name="twitter:site" content="@PusyuuOfficial">
    <meta name="twitter:title" content="プシューサービス - ゲートウェイ">
    <meta name="twitter:description" content="プシューサービスのゲートウェイでは、プシューが作ったページへのリンクが一覧になっており見たいページへ行き様々なコンテンツを楽しめます。">
-   <meta name="twitter:image" content="http://21emon.wjg.jp/SystemFolder/IconData/logo-black.png">
+   <meta name="twitter:image" content="http://21emon.wjg.jp/SystemFolder/IconData/gateway_page_logo.png">
    <title>プシューサービス - ゲートウェイ</title>
    <link rel="canonical" href="http://21emon.wjg.jp">
    <link rel="shortcut icon" href="./SystemFolder/IconData/favicon.ico">
    <link rel="stylesheet" href="./Profile/GateProStyle.css">
    <!--
        *----------------------------------
-       |  ThisPageVersion: 5.4         |
+       |  ThisPageVersion: 5.5         |
        |  © 2021-2023 By Pusyuu        |
-       |  LastUpdate: 2023-03-03       |
+       |  LastUpdate: 2023-03-20       |
        |  ・。・ゲートウェイ㌨         |
      ----------------------------------*
    -->
@@ -28,12 +28,12 @@
    <div class="yohaku">
      <div class="bokasi">
        <h1>プシューサービスゲートウェイへようこそ</h1>
-       <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.3</p>
+       <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.5</p>
        <h2>問い合わせの方法</h2>
        <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
        <center>
          <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="http://21emon.wjg.jp:2016/AccessCounter.html"></iframe><li>
-         <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/logo-black.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
+         <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/gateway_page_logo.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
        </center>
          <h3>通常版プシューページへはこちら↓</h3>
          <p>プシューページでは、プシューログ（プシューの心理的な知恵や面白いことを書いたブログ）やプシューサービス（音楽のストリーミングや、プシューが作った自作アプリを使ったり見たりできるサービス）などを見ることができます。</p>
@@ -44,6 +44,9 @@
          <h3>プシュー公式プロフィールはこちら↓</h3>
          <p>プシュープロフィールでは、プシューの好きな事や物を見ることができます。</p>
          <button type=“button” onclick="location.href='./Profile/index.html'">プシュー公式プロフィールへ行く</button>
+         <h3>（開発中）ハイブリットアプリWEB版↓</h3>
+         <p>ハイブリットアプリWEB版、様々なWEBアプリを集めてます。※様々な問題点があるため少々予告なく変更がある場合がります。</p>
+         <button type=“button” onclick="location.href='http://21emon.wjg.jp/AndroidApp/'">ハイブリットアプリへ行く</button>
          <br>
        </div>
      </center>
