--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <h2>問い合わせの方法</h2>
        <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
        <center>
-         <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="http://21emon.wjg.jp:2016/AccessCounter.html"></iframe><li>
+         <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="https://21emon.wjg.jp/cgi-bin/public/counter/count.php"></iframe><li>
          <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/gateway_page_logo.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
        </center>
          <h3>通常版プシューページへはこちら↓</h3>
