--- a/SystemFolder/SubHtml/b-web.html
+++ b/SystemFolder/SubHtml/b-web.html
@@ -65,7 +65,7 @@
           <img src="../ImageData/42.jpg" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
           <p>ファイルの(パス)とは、画像のある場所のことお言います。 width="600px"これは、サイズ指定です。600になってますが、数値を変えることでサイズが変わります。</p>
           <h3>最後に、さらに詳しく知りたい方はこちら</h3>
-          <p>今回は初心者でもわかりやすく、勉強できるテンプレートをプシューが作りました。このテンプレートでは、CSSとHTMLを学習できます。 テンプレートの(<a href="../../PusyuuTemplate.zip">ダウンロードはこちら</a>) ダウンロードが完了したら、ダウンロードしたZIPファイルを解凍してください。 解凍したら、(必ずお読みください)を読んでください。 そしたら(必ずお読みください)は、書き方手順も載っておりますので、開いたまま、index.htmlを編集してみてください。</p>
+          <p>今回は初心者でもわかりやすく、勉強できるテンプレートをプシューが作りました。このテンプレートでは、CSSとHTMLを学習できます。 テンプレートの(<a href="../DocData/PusyuuTemplate.zip">ダウンロードはこちら</a>) ダウンロードが完了したら、ダウンロードしたZIPファイルを解凍してください。 解凍したら、(必ずお読みください)を読んでください。 そしたら(必ずお読みください)は、書き方手順も載っておりますので、開いたまま、index.htmlを編集してみてください。</p>
         </article>
       </section>
     </div>
