--- a/SystemFolder/SubHtml/b-UbuntuWebServer.html
+++ b/SystemFolder/SubHtml/b-UbuntuWebServer.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=6.0, minimum-scale=1.0">
   <title>プシューログ - Ubuntuでウェブサーバーを立てる方法</title>
   <link rel="stylesheet" href="../CssData/Style-1.css">
-  <link rel="shortcut icon" href="../IconData/favicon.ico"> </head>
+  <link rel="shortcut icon" href="../IconData/favicon.ico">
+</head>
 <body>
   <header class="header">
     <div class="header_nav">
@@ -43,7 +44,7 @@
         <article class="article" id="p3">
           <h3>様々なcgiを機能させる方法</h3>
           <p>まずはWEBだと結構有名な、PHP CGIの機能させる方法です。まずはコマンドで（sudo apt-get install php）といれインストールします。次に（※干渉防止のため表示できません。そのため<a href="../DocData/b-phpinfo.txt">ここ</a>をクリックして閲覧ださい。）と書いたテキストファイルをindex.phpなどと名前を入力し、（/usr/lib/cgi-bin/）に入れ（注意、このリンクはindex.phpの場合のみ機能します。<a href="http://localhost/cgi-bin/index.php">ここ</a>）を開いてみてください。正常に動作していれば現在のPHP詳細が表示されます。次はpythonCGIを機能させる方法です。まず（apt -y install python）を入力し、pythonをインストールします。次にCGIの機能を有効かするために（a2enmod cgid）を実行します。次に（/etc/apache2/conf-available/cgi-enabled.conf）に（※干渉防止のため表示できません。そのため<a href="../DocData/b-cgisettings.txt">ここ</a>をクリックして閲覧ださい。）をいれ、CGIを機能させるために（a2enconf cgi-enabled）と（systemctl restart apache2）をコマンドで実行します。これで今回紹介した、CGIが機能するはずです。</p>
-    </article>
+        </article>
       </section>
     </div>
   </main>
