--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -34,7 +34,7 @@
                 <p>この画面では、様々なページのセクションにほぼスクロールすることなく、簡単に飛ぶ事ができます。</p>
               </details>
               <nav class="header__nav nav">
-                <ul class="nav__items nav-items" id="NavReload">
+                <ul class="nav__items nav-items">
                   <li><a href="#">一番上へ↑</a></li>
                   <li><a href="#p1">プロフィール</a></li>
                   <li><a href="#p2">プシューの部屋</a></li>
@@ -208,7 +208,7 @@
         <section class="section" id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee style="border: 1px solid #fff; background-color: rgba(0,0,0,0.4); color: #fff;" scrollamount="4">このバージョンでは、ハンバーガーメニューのデザインを変更、ローリング画面を少々変更、アクセシビリティ項目を復元、ソースコードのバグを修正、このページのバージョン23.8</marquee>
+              <marquee style="border: 1px solid #fff; background-color: rgba(0,0,0,0.4); color: #fff;" scrollamount="4">このバージョンでは、ハンバーガーメニューのデザインを変更、ローリング画面を少々変更、アクセシビリティ項目を復元、ソースコードのバグを修正、追記（ハンバーガーメニューのボーダーはみ出る問題の修正をしました修正日2023.04.05）このページのバージョン23.8</marquee>
             <h3>更新履歴</h3>
               <div class="box-8">
                 <hr>
