--- a/SystemFolder/SubHtml/m-FrogTube.html
+++ b/SystemFolder/SubHtml/m-FrogTube.html
@@ -47,12 +47,12 @@ h3 {
 
 <div class="box-8">
 <h3>まいぜんシスターズ</h3>
-<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULPM3yhFc0-fBFuvqx1Vg2YNQ" title="YouTube video player" class="douga_rs"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULPM3yhFc0-fBFuvqx1Vg2YNQ" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
 </div>
 
 <div class="box-8">
 <h3>れふと / Left</h3>
-<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFXN5PkxkwpOHYkEzhxrVm3A" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFXN5PkxkwpOHYkEzhxrVm3A" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
 </div>
 
 <div class="box-8">
@@ -137,12 +137,22 @@ h3 {
 
 <div class="box-8">
 <h3>電撃ランキング</h3>
-<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFqltwdVS2hLvSjC9eFmfrWg" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFqltwdVS2hLvSjC9eFmfrWg" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
 </div>
 
 <div class="box-8">
 <h3>フェルミ研究所 FermiLab</h3>
-<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULF3-1iYGHfR43q_b974vUNYg" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULF3-1iYGHfR43q_b974vUNYg" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+</div>
+
+<div class="box-8">
+<h3>こーく-不透明-</h3>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFmf7Dx0R4JpsS1XZH45SLnQ" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
+</div>
+
+<div class="box-8">
+<h3>こーく-半透明-</h3>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFmK1vT38RSrYYYfmzREo7lw" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen></iframe>
 </div>
 
 </div>
