--- a/Profile/index.html
+++ b/Profile/index.html
@@ -8,9 +8,9 @@
 <link rel="stylesheet" href="GateProStyle.css">
    <!--
        *----------------------------------
-       |  ThisPageVersion: 5.4         |
+       |  ThisPageVersion: 5.5         |
        |  © 2021-2023 By Pusyuu        |
-       |  LastUpdate: 2023-02-20       |
+       |  LastUpdate: 2023-04-18       |
        |  ・。・プロフィール㌨         |
      ----------------------------------*
    -->
@@ -39,8 +39,8 @@
   <hr>
   <h3>コメント<h3>
   <p style="color: #4d4d4d;">このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。
-  このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。
-  どうでもよいですがネタとして言います。私は、ASD、ADHDを、持ってます。</p>
+  このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。プシューサービスに完成は存在しません。そして変化し続けます、変化には期間や期限は存在しません。</p>
+  <p style="color: #4d4d4d;">どうでもよいですがネタとして言います。私は、ASD、ADHDを、持ってます。</p>
   <hr>
   <h3>プシュー公式アカウント一覧</h3>
   <ol>
