--- a/SystemFolder/SubHtml/s-yakudatenaipage2.html
+++ b/SystemFolder/SubHtml/s-yakudatenaipage2.html
@@ -18,7 +18,7 @@
       </h1>
       <nav class="header__nav nav">
         <ul class="nav__items nav-items">
-          <li class="current"><a href="./s-yakudatenaipage.html">現在のページ</a></li>
+          <li class="current"><a href="./s-yakudatenaipage2.html">現在のページ</a></li>
           <li><a href="../../MainHtml/index-1.html#p3">プシューログに戻る</a></li>
         </ul>
       </nav>
