--- a/SystemFolder/SubHtml/b-androidx86nosyoukai.html
+++ b/SystemFolder/SubHtml/b-androidx86nosyoukai.html
@@ -10,8 +10,8 @@
   <header class="header">
     <div class="header_nav">
       <h1 class="header_logo">
-        <a href="#">
-          <img src="../IconData/logo-black.png" alt="ロゴ画像">
+        <a id="hlp" href="#hlp">
+          <img src="../IconData/logo-black.png" alt="ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
         </a>
       </h1>
       <nav class="header__nav nav">
