--- a/SystemFolder/SubHtml/b-blog_archive.html
+++ b/SystemFolder/SubHtml/b-blog_archive.html
@@ -10,9 +10,9 @@
   <header class="header">
     <div class="header_nav">
       <h1 class="header_logo">
-          <a href="#">
-            <img src="../IconData/logo-black.png" alt="ロゴ画像">
-          </a>
+        <a id="hlp" href="#hlp">
+          <img src="../IconData/logo-black.png" alt="ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+        </a>
       </h1>
       <nav class="header__nav nav">
         <ul class="nav__items nav-items">
