--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
    <link rel="stylesheet" href="./Profile/GateProStyle.css">
    <!--
        *----------------------------------
-       |  ThisPageVersion: 5.6         |
+       |  ThisPageVersion: 5.7         |
        |  © 2021-2023 By Pusyuu        |
-       |  LastUpdate: 2023-03-20       |
+       |  LastUpdate: 2023-05-06       |
        |  ・。・ゲートウェイ㌨         |
      ----------------------------------*
    -->
@@ -27,14 +27,21 @@
   <center>
    <div class="yohaku">
      <div class="bokasi">
+       <article class="article">
        <h1>プシューサービスゲートウェイへようこそ</h1>
-       <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.6</p>
+       <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。</p>
+　　　 <p>プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.6</p>
+       <p>注意事項は各サービスにありますが大抵は一つだけです。使用は自由ですが使用等して起きたすべての不利益は一切の責任を取りかねますので予めご了承ください。これだけです。</p>
+       </article>
+       <article class="article">
        <h2>問い合わせの方法</h2>
-       <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
+       <p>何かほかに追加してほしいことや希望、やってほしいことや文句などあればプシュー公式プロフィールのお問い合わせフォームより、お送りください。</p>
        <center>
          <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="https://21emon.wjg.jp/cgi-bin/public/counter/count.php"></iframe><li>
          <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/gateway_page_logo.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
        </center>
+       </article>
+       <article class="article">
          <h3>通常版プシューページへはこちら↓</h3>
          <p>プシューページでは、プシューログ（プシューの心理的な知恵や面白いことを書いたブログ）やプシューサービス（音楽のストリーミングや、プシューが作った自作アプリを使ったり見たりできるサービス）などを見ることができます。</p>
          <button type=“button” onclick="location.href='./MainHtml/index-1.html'">通常版プシューページへ行く</button>
@@ -47,7 +54,11 @@
          <h3>（開発中）ハイブリットアプリWEB版↓</h3>
          <p>ハイブリットアプリWEB版、様々なWEBアプリを集めてます。※様々な問題点があるため少々予告なく変更がある場合がります。</p>
          <button type=“button” onclick="location.href='http://21emon.wjg.jp/AndroidApp/'">ハイブリットアプリへ行く</button>
+         <h3>（アップデート版）時報付き、時刻表示アプリ↓</h3>
+         <p>こちらのサービスでは、一時間に一回と30分に一回鳴る時計アプリを遊び程度で作ってみました。多様な使い道が皆さんにあるかなと思い公開しました。</p>
+         <button type=“button” onclick="location.href='http://21emon.wjg.jp/ClockWithTimeSignal/'">時報付き時計表示アプリへ行く</button>
          <br>
+       </article>
        </div>
      </center>
    </div>
