--- a/SystemFolder/SubHtml/m-MusicRadio.html
+++ b/SystemFolder/SubHtml/m-MusicRadio.html
@@ -69,7 +69,7 @@ h3 {
 
 <div class="box-8">
 <h3>J-Pop Sakura Natuskasiiラジオ</h3>
-<audio src="https://igor.torontocast.com:1710/;" oncontextmenu="return false;" controls controlsList="nodownload"><p style="color: red">HTML5のaudioに対応していないブラウザのため音楽は表示されません。</p></audio>
+<audio src="https://cast1.torontocast.com:2170/;" oncontextmenu="return false;" controls controlsList="nodownload"><p style="color: red">HTML5のaudioに対応していないブラウザのため音楽は表示されません。</p></audio>
 </div>
 
 </div>
