--- a/SystemFolder/SubHtml/m-MusicRadio.html
+++ b/SystemFolder/SubHtml/m-MusicRadio.html
@@ -4,20 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=6.0, minimum-scale=1.0">
 <title>マルチメディア - 音楽、ラジオ!!</title>
-<link rel="stylesheet" href="../CssData/Style-1.css">
-<link rel="shortcut icon" href="../IconData/favicon.ico">
+<link rel="stylesheet" href="../../CssData/Style-1.css">
+<link rel="shortcut icon" href="../../IconData/favicon.ico">
 <style>
 .box-8 {
   background-color: rgba(255,255,255,0.5);
+  width: 300px;
+  height: auto;
 }
-audio {
-  width: 65vw;
-  height: 35px;
-}
+
 @media only screen and (max-width:650px){
 audio {
   width: 55vw;
   height: 35px;
+}
+.box-8 {
+  width: auto;
 }
 }
 @media only screen and (max-width:300px){
@@ -38,7 +40,7 @@ h3 {
 
 <h1>以下のリストから聞きたい音楽、ラジオを選択してね❕</h1>
 
-<div class="main_yohaku">
+<div class="main_wrapper">
 
 <div class="yokoori">
 
@@ -54,7 +56,7 @@ h3 {
 
 <div class="box-8">
 <h3>90s90s BEATラジオ</h3>
-<audio src="https://90s90s.hoerradar.de/90s90s-main-mp3-hq" oncontextmenu="return false;" controls controlsList="nodownload"><p style="color: red">HTML5のaudioに対応していないブラウザのため音楽は表示されません。</p></audio>
+<audio src="https://regiocast.streamabc.net/regc-90s90smain4920117-mp3-192-6232809" oncontextmenu="return false;" controls controlsList="nodownload"><p style="color: red">HTML5のaudioに対応していないブラウザのため音楽は表示されません。</p></audio>
 </div>
 
 <div class="box-8">
@@ -77,7 +79,7 @@ h3 {
 </div>
 
 <h2>マルチメディアに戻る</h2>
-<a href="./s-MultiMedia.html" target="_blank"><img src="../IconData/img-2.png" alt="戻るボタン" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
+<a href="./index.html" target="_blank"><img src="../../IconData/img-2.png" alt="戻るボタン" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
 
 </div>
 
