--- a/SystemFolder/SubHtml/m-FrogTube.html
+++ b/SystemFolder/SubHtml/m-FrogTube.html
@@ -9,15 +9,20 @@
 <style>
 .box-8 {
   background-color: rgba(255,255,255,0.5);
+  width: 300px;
+  height: auto;
 }
 .douga_rs {
-  width: 65vw;
-  height: 40vh;
+  width: 100%;
+  height: auto;
 }
 @media only screen and (max-width:650px){
 .douga_rs {
   width: 55vw;
   height: 30vh;
+}
+.box-8 {
+  width: auto;
 }
 }
 @media only screen and (max-width:300px){
@@ -39,6 +44,8 @@ h3 {
 <h1>以下のリストから視聴したい動画を選択してね❕</h1>
 
 <div class="main_yohaku">
+
+<div class="yokoori">
 
 <div class="box-8">
 <h3>HikakinTV</h3>
