--- a/SystemFolder/SubHtml/m-MusicRadio.html
+++ b/SystemFolder/SubHtml/m-MusicRadio.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=6.0, minimum-scale=1.0">
 <title>マルチメディア - 音楽、ラジオ!!</title>
-<link rel="stylesheet" href="../../CssData/Style-1.css">
-<link rel="shortcut icon" href="../../IconData/favicon.ico">
+<link rel="stylesheet" href="../CssData/Style-1.css">
+<link rel="shortcut icon" href="../IconData/favicon.ico">
 <style>
 .box-8 {
   background-color: rgba(255,255,255,0.5);
@@ -40,7 +40,7 @@ h3 {
 
 <h1>以下のリストから聞きたい音楽、ラジオを選択してね❕</h1>
 
-<div class="main_wrapper">
+<div class="main_yohaku">
 
 <div class="yokoori">
 
@@ -79,7 +79,7 @@ h3 {
 </div>
 
 <h2>マルチメディアに戻る</h2>
-<a href="./index.html" target="_blank"><img src="../../IconData/img-2.png" alt="戻るボタン" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
+<a href="./s-MultiMedia.html" target="_blank"><img src="../IconData/img-2.png" alt="戻るボタン" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
 
 </div>
 
