バグを修正しました。

--- a/SystemFolder/SubHtml/s-TyaimuTukiTokeiOtamesi.html
+++ b/SystemFolder/SubHtml/s-TyaimuTukiTokeiOtamesi.html
@@ -27,7 +27,7 @@
       <section class="section">
         <article>
           <h2>お試しチャイム付き時計!!</h2>
-          <p>ここでは、ダウンロードをする前にチャイム付き時計を試すことができます。ダウンロードすれば以下の機能がご利用いただけます→壁紙の変更やチャイム音の変更。「 プロジェクトの閲覧、ダウンロードは<a href="https://github.com/PusyuuOfficial/time-denote-display-app/tree/main/time_app_all_file_the_Clock%20with%20time%20signal" target="_blank">こちら</a>」私は、無理にはすすめる事はしたくありません。 なので今回こちらのサービスを用意しました。 どんな人に向いているか➡ ダウンロード手順が複雑なためダウンロードはしたくない方。</p>
+          <p>ここでは、ダウンロードをする前にチャイム付き時計を試すことができます。ダウンロードすれば以下の機能がご利用いただけます→壁紙の変更やチャイム音の変更。「 プロジェクトの閲覧、ダウンロードは<a href="https://github.com/PusyuuOfficial/ClockWithChime" target="_blank">こちら</a>」私は、無理にはすすめる事はしたくありません。 なので今回こちらのサービスを用意しました。 どんな人に向いているか➡ ダウンロード手順が複雑なためダウンロードはしたくない方。</p>
           <iframe width="100%" height="500vh" title="お試しプシューアプリ" src="http://21emon.wjg.jp/ClockWithTimeSignal/index.html"></iframe>
         </article>
       </section>
