--- a/SystemFolder/SubHtml/m-FrogTube.html
+++ b/SystemFolder/SubHtml/m-FrogTube.html
@@ -93,6 +93,11 @@ h3 {
 </div>
 
 <div class="box-8">
+<h3>SMART ASW</h3>
+<iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UULFw9aHmhI4hjG-SmUuy-B5Qg" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<div class="box-8">
 <h3>近藤利樹 / Toshiki Kondo</h3>
 <iframe src="https://www.youtube-nocookie.com/embed/videoseries?list=UUsdPpyB9sqoKqEgcFG-DddQ" title="YouTube video player" class="douga_rs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
