メンテナンス、アップデート完了

--- a/SystemFolder/SubHtml/s-PusyuuAppOtamesi.html
+++ b/SystemFolder/SubHtml/s-PusyuuAppOtamesi.html
@@ -28,7 +28,7 @@
         <article>
           <h2>お試しプシューアプリ!!</h2>
           <p>ここでは、ダウンロードをする前にプシューアプリを試すことができます。「 アプリのダウンロードは<a href="https://21emon.wjg.jp:2022/PusyuuApp" target="_blank">こちら</a>」私は、無理にはすすめる事はしたくありません。 なので今回こちらのサービスを用意しました。 どんな人に向いているか➡ ダウンロード手順が複雑なためダウンロードはしたくない方、iPhoneしか手元にない方、PCでしかプシューサービスに興味のない方です。</p>
-          <iframe width="100%" height="500vh" title="お試しプシューアプリ" src="http://21emon.wjg.jp/AndroidApp/index.html"></iframe>
+          <iframe width="100%" height="500vh" title="お試しプシューアプリ" src="http://21emon.wjg.jp/PusyuuApp/index.html"></iframe>
         </article>
       </section>
     </div>
